--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,25 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="getStarted">GET STARTED</string>
+    <string name="nav_user_desc">profile photo</string>
+    <string name="nav_username">full name</string>
+    <string name="label_view_profile">VIEW PROFILE</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="email">Email</string>
+    <string name="continue_text">Continue</string>
+    <string name="menu_home">HOME</string>
+    <string name="menu_sign_out">Sign out</string>
+    <string name="action_settings">action</string>
+    <string name="menu_gallery">galler</string>
+    <string name="menu_slideshow">slideshow</string>
+    <string name="navigation_drawer_open">open</string>
+    <string name="navigation_drawer_close">close</string>
+    <string name="nav_open">open</string>
+    <string name="nav_close">close</string>
+    <string name="title_activity_main2">MainActivity</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
 </resources>
