delivery form done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,5 +140,13 @@
     <string name="number_of_packages">amounr</string>
     <string name="next">Next</string>
     <string name="pickup_location">Pickup Location</string>
+    <string name="delivery_address">delivery address</string>
+    <string name="note">Delivery Note</string>
+    <string name="recipient_phone_number">0712345678</string>
+    <string name="delivery_info">Who\'s receiving teh package?</string>
+    <string name="name">Name</string>
+    <string name="choice_small">Small</string>
+    <string name="choice_medium">Medium</string>
+    <string name="choice_large">Large</string>
 
 </resources>
