--- a/driverapplication/src/main/res/values/strings.xml
+++ b/driverapplication/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="password">Password</string>
     <string name="forgot_password">Forgot Password ?</string>
     <string name="create_your_account">Create Your Account</string>
+    <string name="login">Login</string>
 </resources>
