--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,7 @@
 
 
     <string name="access_token" translatable="false">sk.eyJ1IjoibS1ndWRsZSIsImEiOiJja3Jzd3BtYXQzZTUxMzFwZW5lOWpsZnRjIn0.QIdA-7eQZBC6G_K54vutQA</string>
+    <string name="dropexpress1" translatable="false">sk.eyJ1IjoibS1ndWRsZSIsImEiOiJja3NobGcwNHkwMWNsMm9uY2lxOXhpeGVlIn0.Qo2hlm6msn9s-HLrx2fKpw</string>
     <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
     <string name="user_location_permission_not_granted">You didnt grant location permissions.</string>
 
