--- a/driverapplication/src/main/res/values/strings.xml
+++ b/driverapplication/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-<!--    Access token-->
+    <!--    Access token-->
 
     <string name="app_name">DropEx Driver</string>
     <string name="first_name">First Name</string>
@@ -89,5 +89,13 @@
     <string name="nav_username">Username</string>
     <string name="label_view_profile">View Profile</string>
     <string name="nav_user_desc">Profile picture</string>
+    <string name="channel_id" translatable="false">101</string>
+    <string name="menu_work_mode">Work Mode</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="vehicle_model">Vehicle Model</string>
+    <string name="plate_number">Car Plate Number</string>
+    <string name="manufactured_year">Manufactured Year</string>
+    <string name="start_work">Start Work</string>
 
 </resources>
