--- a/driverapplication/src/main/res/values/strings.xml
+++ b/driverapplication/src/main/res/values/strings.xml
@@ -99,5 +99,8 @@
     <string name="start_work">Start Work</string>
     <string name="confirmation_code">Confirmation Code</string>
     <string name="confirm">Confirm</string>
-
+    <string name="location_updated">Location Updated: %1$s</string>
+    <string name="request_location_updates">Request location updates</string>
+    <string name="remove_location_updates">Remove location updates</string>
+    <string name="launch_activity">Launch activity</string>
 </resources>
